--- a/doc/userman/userman.tex
+++ b/doc/userman/userman.tex
@@ -118,7 +118,7 @@ WordNet, such as semantic file codes, or hypernymy relationships.
 
   Spanish and Catalan linguistic data were originally developed 
   by people in CLiC, Centre de Llenguatge i Computacio at Universitat
-  de Barcelona (http://clic.fil.ub.es).
+  de Barcelona (http://clic.ub.edu).
 
   Many people further contributed to by reporting problems, suggesting 
   various improvements, submitting actual code or extending linguistic 
